# vaulti

./: .gitignore  flake.nix  pyproject.toml  vaulti
.github/workflows/: tests.yml
