[tool.poetry]
name = "vaulti"
version = "0.1.0"
description = "Utility to edit yaml files with inline ansible vault variables"
authors = ["Andreas Zweili <andreas@zweili.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.17.2"
"ruamel.yaml" = "^0.18.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
black = "^24.8.0"
mypy = "^1.11.1"
python-lsp-server = "^1.11.0"
pylsp-mypy = "^0.6.8"

[tool.pylint]
max-line-length = 88
[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.mypy]
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
